implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/fail_with_mutable_context.stderr
error: The context argument must be passed as reference
 --> $DIR/fail_with_mutable_context.rs:2:7
  |
2 | async fn my_test(mut ctx: Context) -> ockam::Result<()> {
  |       ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fail_with_mutable_context.rs:1:1
  |
1 | / #[ockam_node_test_attribute::node_test]
2 | | async fn my_test(mut ctx: Context) -> ockam::Result<()> {
3 | |     ctx.stop().await.unwrap();
4 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/fail_with_mutable_context.rs`
